# OpenGL-3d-Printer

./: ,gitmodules  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Drukarka3d.sln  README.md  main.cpp
Drukarka3d/: Camera.cpp  Camera.h  Drukarka3d.vcxproj  Drukarka3d.vcxproj.filters  main.cpp
Drukarka3d/include/: AbstractObj.h  Arm.h  Base.h  BasicCone.h  BasicCube.h  BasicCuboid.h  BasicCylinder.h  BasicSphere.h  Camera.h  CompositeGroup.h  ConiferTree.h  DeciduousTree.h  Digit.h  DirectionalLight.h  Extruder.h  Forest.h  GraphicsObj.h  IceCream.h  Lamp.h  LightManager.h  LightObject.h  Material.h  ObjectGroup.h  PointLight.h  Printer.h  Screen.h  Skybox.h  SpotLight.h  Tabletop.h  Terrain.h  Texture.h  Vertex.h  shprogram.h
Drukarka3d/shaders/: core.frag  core.vert  fragshader.frag  lampshader.frag  skyboxshader.frag  vertshader.vert
Drukarka3d/src/: AbstractObj.cpp  Arm.cpp  Base.cpp  BasicCone.cpp  BasicCuboid.cpp  BasicSphere.cpp  Camera.cpp  CompositeGroup.cpp  ConiferTree.cpp  DeciduousTree.cpp  Digit.cpp  DirectionalLight.cpp  Extruder.cpp  Forest.cpp  GraphicsObj.cpp  IceCream.cpp  Lamp.cpp  LightManager.cpp  LightObject.cpp  Material.cpp  ObjectGroup.cpp  PointLight.cpp  Printer.cpp  Screen.cpp  Skybox.cpp  SpotLight.cpp  Tabletop.cpp  Terrain.cpp  Texture.cpp  shprogram.cpp
include/: AbstractObj.h  Arm.h  Base.h  BasicCone.h  BasicCube.h  BasicCuboid.h  BasicCylinder.h  BasicSphere.h  Camera.h  CompositeGroup.h  ConiferTree.h  DeciduousTree.h  Digit.h  DirectionalLight.h  Extruder.h  Forest.h  GraphicsObj.h  IceCream.h  Lamp.h  LightManager.h  LightObject.h  Material.h  ObjectGroup.h  PointLight.h  Printer.h  Screen.h  Skybox.h  SpotLight.h  Tabletop.h  Terrain.h  Texture.h  Vertex.h  shprogram.h
shaders/: fragshader.frag  lampshader.frag  skyboxshader.vert  vertshader.vert
src/: AbstractObj.cpp  Arm.cpp  Base.cpp  BasicCone.cpp  BasicCuboid.cpp  BasicSphere.cpp  Camera.cpp  CompositeGroup.cpp  ConiferTree.cpp  DeciduousTree.cpp  Digit.cpp  DirectionalLight.cpp  Extruder.cpp  Forest.cpp  GraphicsObj.cpp  IceCream.cpp  Lamp.cpp  LightManager.cpp  LightObject.cpp  Material.cpp  ObjectGroup.cpp  PointLight.cpp  Printer.cpp  Screen.cpp  Skybox.cpp  SpotLight.cpp  Tabletop.cpp  Terrain.cpp  Texture.cpp  shprogram.cpp
submodules/: CMakeLists.txt
